--- a/view/content_movie_selection.ejs
+++ b/view/content_movie_selection.ejs
@@ -173,14 +173,14 @@
             //         });
             //         document.getElementById("popupArea").style.display = "block";
             //     });
-            window.location.href = "/select_movie_time_popup";
+            window.location.href = "/select_movie_time";
         });
     });
 
     const timeSlots = document.querySelectorAll(".timeSlot");
     timeSlots.forEach((timeSlot) => {
         timeSlot.addEventListener("click", () => {
-            window.location.href = "/select_movie_time_popup";
+            window.location.href = "/select_movie_time";
         });
     })
 
