--- a/view/popup_complete.ejs
+++ b/view/popup_complete.ejs
@@ -48,6 +48,7 @@
         margin: 1rem 0 1rem 0;
         color: rgb(192, 192, 192);
         z-index: 999;
+        padding-top: 3rem;
     }
 
     /*  결제완료 이미지 박스 */
