--- a/view/popup_payment_card_input.ejs
+++ b/view/popup_payment_card_input.ejs
@@ -1,7 +1,6 @@
-<section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">카드 삽입 안내</p>
-        <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
+        <!-- <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div> -->
     </article>
     <section class="popupContent">
         <!-- ~여기에 작성~ -->
@@ -9,7 +8,6 @@
         <p class="timeoutText"><span id="timer" class="timer">5</span>초 후 자동종료 됩니다.</p>
         <div class="popupContentImg"></div>
     </section>
-</section>
 
 <script>
 
@@ -35,7 +33,6 @@
         padding: 2rem;
         align-items: center;
         flex-direction: column;
-        padding-top: 4rem;
     }
 
     .popupContentText {
@@ -43,6 +40,8 @@
         width: 100%;
         text-align: center;
         color: white;
+        padding-top: 4rem;
+
     }
 
     .popupContentImg {
