--- a/view/popup_payment_point_accumulation.ejs
+++ b/view/popup_payment_point_accumulation.ejs
@@ -1,20 +1,15 @@
-<section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">포인트 적립 번호 요청</p>
         <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
     </article>
     <section class="popupContent">
-
         <!-- 키패드 영역 -->
-        <p class="titleBox">포인트 적립할 번호를 입력해 주세요.</p>
         <div class="keypadAreaBackgruond">
-            <%- include("keypadFrame", {title: ""}) %>
+            <%- include("keypadFrame", { title: "포인트 적립할 번호를 입력해 주세요" }) %>
         </div>
         <!-- 건너뛰기 버튼 -->
         <button id="notEarnPointBtn" class="nextBtn">건너뛰기</button>
-
     </section>
-</section>
 
 <script>
     const earnPointBtn = document.getElementById("checkBtn");
@@ -31,15 +26,11 @@
 
 <style>
     /* 타이틀박스 */
-    .titleBox {
-        text-align: center;
-        font-size: 2rem;
-        margin-bottom: 3.5rem;
-        color: #ffffff;
+    .keypadAreaBackgruond {
+        padding-top: 5rem;
     }
 
     .popupContent {
-        padding-top: 4rem;
         text-align: center;
     }
 
@@ -70,5 +61,9 @@
         background-color: #1F2026;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         transform: translateY(0);
+    }
+
+    .keypadArea {
+        height: 37.5rem;
     }
 </style>
