--- a/view/popup_payment_summary.ejs
+++ b/view/popup_payment_summary.ejs
@@ -1,7 +1,7 @@
 <section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">결제 완료 안내</p>
-        <i class="popupBarTextCommon fa-solid fa-x"></i>
+        <!-- <i class="popupBarTextCommon fa-solid fa-x"></i> -->
     </article>
     <section class="popupContent">
         <!-- ~여기에 작성~ -->
@@ -60,7 +60,6 @@
     .paymentInfoArea {
         width: 100%;
         height: 50%;
-
         margin: 4rem 1rem 0;
     }
 
