--- a/view/popup_select_headcount.ejs
+++ b/view/popup_select_headcount.ejs
@@ -5,35 +5,41 @@
     </article>
     <section class="popupContent">
         <!-- ~여기에 작성~ -->
+        <article class="headcountSelection">
+            <h2 class="headcountTitle"><span class="infoIcon headcountTitle">※</span> 인원 선택은 최대 8명까지 가능합니다.</h2>
+            <span class="headcountTitle">현재 선택된 인원 수: <input type="number" id="headcountCurrent"
+                    class="headcountTitle headcountCurrent" value="0" readonly> 명</span>
+
+        </article>
         <div class="adult selectPeople">
             <div class="number-selection">
                 <div class="ticketTitle">성인</div>
 
-                <input type="radio" id="adult-0" name="adult" value="0" />
-                <label for="adult-0">0</label>
+                <!-- <input type="checkbox" id="adult-0" name="adult" value="0" />
+                            <label for="adult-0">0</label> -->
 
-                <input type="radio" id="adult-1" name="adult" value="1" />
+                <input type="checkbox" id="adult-1" name="adult" value="1" />
                 <label for="adult-1">1</label>
 
-                <input type="radio" id="adult-2" name="adult" value="2" />
+                <input type="checkbox" id="adult-2" name="adult" value="2" />
                 <label for="adult-2">2</label>
 
-                <input type="radio" id="adult-3" name="adult" value="3" />
+                <input type="checkbox" id="adult-3" name="adult" value="3" />
                 <label for="adult-3">3</label>
 
-                <input type="radio" id="adult-4" name="adult" value="4" />
+                <input type="checkbox" id="adult-4" name="adult" value="4" />
                 <label for="adult-4">4</label>
 
-                <input type="radio" id="adult-5" name="adult" value="5" />
+                <input type="checkbox" id="adult-5" name="adult" value="5" />
                 <label for="adult-5">5</label>
 
-                <input type="radio" id="adult-6" name="adult" value="6" />
+                <input type="checkbox" id="adult-6" name="adult" value="6" />
                 <label for="adult-6">6</label>
 
-                <input type="radio" id="adult-7" name="adult" value="7" />
+                <input type="checkbox" id="adult-7" name="adult" value="7" />
                 <label for="adult-7">7</label>
 
-                <input type="radio" id="adult-8" name="adult" value="8" />
+                <input type="checkbox" id="adult-8" name="adult" value="8" />
                 <label for="adult-8">8</label>
             </div>
         </div>
@@ -42,31 +48,31 @@
             <div class="number-selection">
                 <div class="ticketTitle">청소년</div>
 
-                <input type="radio" id="youth-0" name="youth" value="0" />
-                <label for="youth-0">0</label>
+                <!-- <input type="checkbox" id="youth-0" name="youth" value="0" />
+                            <label for="youth-0">0</label> -->
 
-                <input type="radio" id="youth-1" name="youth" value="1" />
+                <input type="checkbox" id="youth-1" name="youth" value="1" />
                 <label for="youth-1">1</label>
 
-                <input type="radio" id="youth-2" name="youth" value="2" />
+                <input type="checkbox" id="youth-2" name="youth" value="2" />
                 <label for="youth-2">2</label>
 
-                <input type="radio" id="youth-3" name="youth" value="3" />
+                <input type="checkbox" id="youth-3" name="youth" value="3" />
                 <label for="youth-3">3</label>
 
-                <input type="radio" id="youth-4" name="youth" value="4" />
+                <input type="checkbox" id="youth-4" name="youth" value="4" />
                 <label for="youth-4">4</label>
 
-                <input type="radio" id="youth-5" name="youth" value="5" />
+                <input type="checkbox" id="youth-5" name="youth" value="5" />
                 <label for="youth-5">5</label>
 
-                <input type="radio" id="youth-6" name="youth" value="6" />
+                <input type="checkbox" id="youth-6" name="youth" value="6" />
                 <label for="youth-6">6</label>
 
-                <input type="radio" id="youth-7" name="youth" value="7" />
+                <input type="checkbox" id="youth-7" name="youth" value="7" />
                 <label for="youth-7">7</label>
 
-                <input type="radio" id="youth-8" name="youth" value="8" />
+                <input type="checkbox" id="youth-8" name="youth" value="8" />
                 <label for="youth-8">8</label>
             </div>
         </div>
@@ -76,46 +82,116 @@
             <div class="number-selection">
                 <div class="ticketTitle">우대</div>
 
-                <input type="radio" id="special-0" name="special" value="0" />
-                <label for="special-0">0</label>
+                <!-- <input type="checkbox" id="special-0" name="special" value="0" />
+                            <label for="special-0">0</label> -->
 
-                <input type="radio" id="special-1" name="special" value="1" />
+                <input type="checkbox" id="special-1" name="special" value="1" />
                 <label for="special-1">1</label>
 
-                <input type="radio" id="special-2" name="special" value="2" />
+                <input type="checkbox" id="special-2" name="special" value="2" />
                 <label for="special-2">2</label>
 
-                <input type="radio" id="special-3" name="special" value="3" />
+                <input type="checkbox" id="special-3" name="special" value="3" />
                 <label for="special-3">3</label>
 
-                <input type="radio" id="special-4" name="special" value="4" />
+                <input type="checkbox" id="special-4" name="special" value="4" />
                 <label for="special-4">4</label>
 
-                <input type="radio" id="special-5" name="special" value="5" />
+                <input type="checkbox" id="special-5" name="special" value="5" />
                 <label for="special-5">5</label>
 
-                <input type="radio" id="special-6" name="special" value="6" />
+                <input type="checkbox" id="special-6" name="special" value="6" />
                 <label for="special-6">6</label>
 
-                <input type="radio" id="special-7" name="special" value="7" />
+                <input type="checkbox" id="special-7" name="special" value="7" />
                 <label for="special-7">7</label>
 
-                <input type="radio" id="special-8" name="special" value="8" />
+                <input type="checkbox" id="special-8" name="special" value="8" />
                 <label for="special-8">8</label>
             </div>
         </div>
-
-
-        <button id="selectPeopleBtn" class="selectPeopleBtn">선택 완료</button>
+        <button id="selectPeopleBtn" class="selectPeopleBtn disalbledBtn">선택 완료</button>
     </section>
 </section>
 
+<!-- ==script== -->
 <script>
-    const selectPeopleButton = document.getElementById( "selectPeopleBtn" );
+    const selectPeopleBtn = document.getElementById("selectPeopleBtn");
+    const headcountCurrent = document.getElementById("headcountCurrent");
 
-    selectPeopleButton.addEventListener( "click", () => {
-            window.location.href = "/select_seat";
-        } );
+    // JSON으로 빠져야하는 객체
+    const movieData = {
+        adult: 0,
+        youth: 0,
+        special: 0
+    };
+
+    // DOM ID 할당 객체
+    const headCounterDom = {
+        adult: [],
+        youth: [],
+        special: []
+    };
+
+    for (let key in movieData) {
+        document.querySelectorAll(`input[name="${key}"]`).forEach((checkbox) => {
+            checkbox.addEventListener('change', (event) => {
+                const checkboxes = document.querySelectorAll(`input[name="${key}"]:checked`);
+                if (checkboxes.length > 0) {
+                    switch (event.target.name) {
+                        case "adult":
+                            movieData.adult = Number(event.target.value);
+                            break;
+                        case "youth":
+                            movieData.youth = Number(event.target.value);
+                            break;
+                        case "special":
+                            movieData.special = Number(event.target.value);
+                    }
+                } else {
+                    movieData[key] = 0;
+                }
+                const headCountValue = Number(movieData.adult + movieData.youth + movieData.special);
+                if (headCountValue > 8 || headCountValue == 0) {
+                    selectPeopleBtn.classList.add("disalbledBtn");
+                    headcountCurrent.classList.add("valueFalse");
+                } else {
+                    selectPeopleBtn.classList.remove("disalbledBtn");
+                    headcountCurrent.classList.remove("valueFalse");
+                }
+                headcountCurrent.value = headCountValue;
+
+                console.log(movieData)
+            });
+        });
+    }
+
+    // inputBox DOM ID 할당 //
+    for (let key in headCounterDom) {
+        for (let i = 1; i <= 8; i++) {
+            if (document.getElementById(`${key}-${i}`)) {
+                headCounterDom[key].push(document.getElementById(`${key}-${i}`));
+            }
+        }
+    }
+
+    // 체크박스를 -> 라디오 버튼 기능처럼 사용 //
+    for (let key in headCounterDom) {
+        headCounterDom[key].forEach((item) => {
+            item.addEventListener("click", (event) => {
+                headCounterDom[key].forEach((item) => {
+                    if (item != document.getElementById(event.target.id)) {
+                        item.checked = false;
+                    }
+                })
+            })
+        })
+    }
+
+    selectPeopleBtn.addEventListener("click", () => {
+        window.location.href = "/select_seat";
+    });
+
 </script>
 
 <style>
@@ -130,7 +206,7 @@
         background-color: #3D3F4D;
         position: relative;
         margin-bottom: 5rem;
-        top: 15%;
+        top: 7.5%;
         color: #ffffff;
         left: 17.5%;
     }
@@ -140,7 +216,7 @@
         height: 4rem;
         width: 11rem;
         font-size: 1.6rem;
-        margin-top: 10rem;
+        margin-top: 3.5rem;
         background-color: #DE1E2D;
         color: #ffffff;
         border: none;
@@ -159,6 +235,12 @@
     .selectPeopleBtn:active {
         background-color: #b41c2b;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+
+    .disalbledBtn {
+        background-color: #3b3b3b;
+        color: #9d9d9d;
+        pointer-events: none;
     }
 
     /* 숫자 선택박스의 텍스트 */
@@ -181,7 +263,7 @@
         justify-content: space-between;
     }
 
-    .number-selection input[type="radio"] {
+    .number-selection input[type="checkbox"] {
         display: none;
     }
 
@@ -208,8 +290,57 @@
     }
 
     /* 라디오 버튼이 체크되었을 때 해당 라벨의 스타일을 변경 */
-    .number-selection input[type="radio"]:checked+label {
+    .number-selection input[type="checkbox"]:checked+label {
         background-color: #DE1E2D;
         color: white;
+    }
+
+    .headcountSelection {
+        /* border: 1px solid red; */
+        width: 65%;
+        text-align: center;
+        color: #fff;
+        padding-top: 4rem;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .headcountTitle {
+        font-size: 1.4rem;
+        padding: 0.5rem;
+        letter-spacing: 0.03rem;
+    }
+
+    .infoIcon{
+        color: #dbdbdb;
+        font-size: 1.7rem;
+        padding: 0;
+    }
+
+    .headcountCurrent {
+        width: 2.7rem;
+        height: 2.5rem;
+        line-height: 2.5rem;
+        color: #000;
+        border-radius: 0.3rem;
+        text-align: center;
+        background: #bfbfbf;
+        border: none;
+        outline: none;
+        font-weight: 750;
+    }
+    .valueFalse{
+        background: #DE1E2D;
+        color: #fff;
+        font-weight: 600;
+
+    }
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
     }
 </style>
