--- a/view/popup_user_verification.ejs
+++ b/view/popup_user_verification.ejs
@@ -1,37 +1,30 @@
 <!-- ===팝업 영역=== -->
-<section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">회원번호 입력 안내</p>
         <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
     </article>
     <section class="popupContent">
         <!-- 키패드 영역 -->
-        <h2 class="popupTitleText">회원번호를 입력해주세요</h2>
-        <%- include("keypadFrame", { title: "" }) %>
+        <section class="keypadBoxArea">
+            <%- include("keypadFrame", { title: "회원번호를 입력해주세요" }) %>
+        </section>
+
     </section>
-</section>
+
 
 <script>
     const checkBtn = document.getElementById("checkBtn");
-    checkBtn.addEventListener("click",()=>{
+    checkBtn.addEventListener("click", () => {
         window.location.href = "/point_confirmation";
     });
 </script>
 
 <style>
-    .popupContent {
-        padding-top: 3.5rem;
-    }
-
-    .popupTitleText{
-        font-size: 2rem;
-        letter-spacing: 1px;
-        color: #FFFFFF;
-        padding-bottom: 2.5rem;
+    .keypadBoxArea{
+        padding-top: 5.5rem;;
     }
 
     .keypadArea {
         height: 37.5rem;
     }
 </style>
-
