--- a/view/popup_ticket_print.ejs
+++ b/view/popup_ticket_print.ejs
@@ -1,7 +1,7 @@
 <section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">티켓 출력 안내</p>
-        <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
+        <!-- <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div> -->
     </article>
     <section class="popupContent">
         <p class="printLabel">티켓 출력을 진행해 주세요.</p>
@@ -84,7 +84,6 @@
         randomDigitDom[key][0].innerText = getRandomDigitNumber([...randomDigitDom[key][1]])
     }
 
-    /// [미완성] 티켓출력 버튼 ///
     const printTicketBtn = document.getElementById("printTicketBtn");
     const ticketArea = document.getElementById("ticketArea");
 
@@ -99,13 +98,13 @@
 <style>
     .popupContent {
         text-align: center;
-        padding-top: 3rem;
     }
 
     .printLabel {
         font-size: 2rem;
         padding-bottom: 2.5rem;
         color: #FFFFFF;
+        padding-top: 3rem;
     }
 
     /* 티켓영역 */
@@ -237,5 +236,84 @@
     .confirmButtons:hover {
         background-color: #a71d2a;
         box-shadow: 0 6px 10px rgba(0, 0, 0, 0.25);
+    }
+
+    /* print*/
+    @media print {
+        * {
+            font-size: 6px;
+        }
+
+        body * {
+            visibility: hidden;
+            /* 전체 페이지를 숨김 */
+        }
+
+        #ticketArea,
+        #ticketArea * {
+            visibility: visible;
+            /* ticketArea 영역만 보임 */
+        }
+
+        #ticketArea {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translate(-50%);
+            width: 100%;
+            height: 100rem;
+        }
+
+        .ticketDetail,
+        .ticketTitle,
+        .ticketDetailValue,
+        #random4Num,
+        #random3Num,
+        #random5Num,
+        .barCodeNumber {
+            font-size: 5rem;
+        }
+
+        .ticketHeader {
+            height: 10rem;
+        }
+
+        .seatInfo {
+            height: 10rem;
+            width: 90rem;
+            font-size: 2rem;
+        }
+
+        .seatNum {
+            width: 10rem;
+            height: 7rem;
+            line-height: 7rem;
+            background: #868686;
+            text-align: center;
+            margin: 0.2rem;
+            border-radius: 0.3rem;
+            color: #fff;
+            font-size: 6rem;
+        }
+
+        .ticketInfo {
+            width: 50%;
+            height: 3.9rem;
+            text-align: center;
+            line-height: 3.9rem;
+            border-radius: 3rem;
+            position: absolute;
+            left: 50%;
+            top: 100%;
+            transform: translate(-50%, -50%);
+            background: #e03e49;
+            color: #fff;
+            font-size: 3.05rem;
+        }
+
+        .barCode {
+            width: 83rem;
+            height: 80;
+        }
     }
 </style>
