--- a/view/version2/payment_summary_popup.ejs
+++ b/view/version2/payment_summary_popup.ejs
@@ -24,7 +24,7 @@
         .paymentInfoArea {
             width: 100%;
             height: 50%;
-            
+
             margin: 4rem 1rem 0;
         }
 
@@ -36,18 +36,14 @@
             color: white;
         }
 
-        .paymentTimerMessage{
+        .paymentTimerMessage {
             font-size: 2.4rem;
             color: white;
         }
 
         .paymentInfo {
             width: 40rem;
-            height: 5rem;
-
-            color: #ffffff;
-
-            border: 0.1rem solid #ffffff;
+            height: 6rem;
 
             margin-left: 21rem;
             margin-top: 4rem;
@@ -56,6 +52,13 @@
             display: flex;
             align-content: center;
             justify-content: space-between;
+            color: #ffffff;
+            border: .06rem solid #EDEDED;
+            border-radius: 0.5rem;
+            margin: 3rem auto;
+            padding: 0 2rem;
+            display: flex;
+            align-items: center;
         }
 
         /* .receiptText {
@@ -71,7 +74,7 @@
             display: flex;
             flex-wrap: wrap;
 
-            margin-top: 6rem;
+            margin-top: 2rem;
             justify-content: space-evenly;
         }
 
@@ -81,6 +84,8 @@
 
             font-size: 1.6rem;
         } */
+         
+
     </style>
 </head>
 
@@ -90,16 +95,16 @@
         <!-- ===레이아웃 영역=== -->
         <section class="layoutArea">
             <!-- ===사이드바 영역=== -->
-            <section class="progressSidebar">
-                <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
-            </section>
+            <!-- <section class="progressSidebar">
+                <div class="progressSettings completedStep"><span class="stepLabel">영화<br>선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">시간<br>선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">좌석<br>선택</span></div>
+                <div class="progressSettings remainingStep paymentStep"><span class="stepLabel">결제</span></div>
+            </section> -->
             <!-- ===팝업 영역=== -->
             <section class="popupArea">
                 <article class="popupBar">
-                    <p class="popupTitle popupBarTextCommon">팝업제목</p>
+                    <p class="popupTitle popupBarTextCommon">결제 완료 안내</p>
                     <i class="popupBarTextCommon fa-solid fa-x"></i>
                 </article>
                 <section class="popupContent">
@@ -110,19 +115,20 @@
                             <h2 class="paymentCompleteMessage">결제가 완료 되었습니다.</h2>
                             <div id="paymentPrice" class="paymentInfo">
                                 <p class="paymentInfoText">금액</p>
-                                <p class="paymentInfoText">--원</p>
+                                <p class="paymentInfoText"><span class="paymentInfoText" id="amountValue">10,000</span>원</p>
                             </div>
                             <div id="discountPrice" class="paymentInfo">
                                 <p class="paymentInfoText">할인</p>
-                                <p class="paymentInfoText">--원</p>
+                                <p class="paymentInfoText"><span class="paymentInfoText" id="discountValue">0</span>원</p>
                             </div>
                             <div id="totalPrice" class="paymentInfo">
                                 <p class="paymentInfoText">총 금액</p>
-                                <p class="paymentInfoText">--원</p>
+                                <p class="paymentInfoText"><span class="paymentInfoText" id="totalValue">10,000</span>원</p>
                             </div>
                         </div>
                         <div id="printReciptQuestion" class="printReciptQuestion">
-                            <h2 class="paymentCompleteMessage receiptText"><span id="timer" class="paymentTimerMessage">5</span>초 뒤에 티켓이 출력됩니다.</h2>
+                            <h2 class="paymentCompleteMessage receiptText"><span id="timer"
+                                    class="paymentTimerMessage">5</span>초 뒤에 티켓이 출력됩니다.</h2>
                             <!-- <button class="printReciptQuestionBtn">아니요</button>
                             <button class="printReciptQuestionBtn">예</button> -->
                         </div>
@@ -146,12 +152,13 @@
         <script>
             document.addEventListener("DOMContentLoaded", () => { // 5초뒤 종료
                 const timer = document.getElementById("timer");
+                const timerSecond = 5;
                 timer.style.color = "white";
-                for (let i = 1; i <= 5; i++) {
+                for (let i = 1; i <= timerSecond; i++) {
                     setTimeout(() => {
-                        timer.innerText = `${6 - i}`;
+                        timer.innerText = `${(timerSecond+1) - i}`;
     
-                        if (i === 5) {
+                        if (i === timerSecond) {
                             window.location.href = "/printTicket";
                         }
                     }, i * 1000);
