popup_complete modified

--- a/view/popup_complete.ejs
+++ b/view/popup_complete.ejs
@@ -1,7 +1,7 @@
 <section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">결제 완료 안내</p>
-        <i class="popupBarTextCommon fa-solid fa-x"></i>
+        <!-- <i class="popupBarTextCommon fa-solid fa-x"></i> -->
     </article>
     <section class="popupContent">
         <!-- ~여기에 작성~ -->
