--- a/view/keypadFrame_1.ejs
+++ b/view/keypadFrame_1.ejs
@@ -82,7 +82,7 @@
         }
 
         showNumber(deque) {
-            const displayNumber = document.getElementById("phoneNumber");
+            const displayNumber = document.getElementById("displayNumber");
             let displayStr = "";
             ///console.log( deque.copyStorage() );
             deque.copyStorage().forEach( number => {
